[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Prefabs/Wax2Test.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/textura_cera_caliente.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/textura_cera_caliente_back.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/mano_cera_caliente.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), -0.806935, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[node name="WaxBand" type="Node2D"]
position = Vector2( 1, 3 )
script = ExtResource( 1 )
width = 100

[node name="Banda" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 153, 123, 264, 240 )
width = 30.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 1.0
antialiased = true

[node name="Banda2" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 262, 241, 304, 165 )
width = 30.0
width_curve = SubResource( 1 )
default_color = Color( 0.819608, 0.819608, 0.819608, 1 )
texture = ExtResource( 3 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 1.0
antialiased = true

[node name="ini" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ini"]
shape = SubResource( 2 )

[node name="end" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="end"]
shape = SubResource( 3 )

[node name="ManoCeraCaliente" type="Sprite" parent="."]
visible = false
position = Vector2( 125, -455 )
texture = ExtResource( 4 )
offset = Vector2( 72, 739 )

[node name="Tween" type="Tween" parent="."]

[node name="first_hand_position" type="Position2D" parent="."]
position = Vector2( 1152, 664 )

[connection signal="mouse_entered" from="ini" to="." method="_on_ini_mouse_entered"]
[connection signal="mouse_exited" from="ini" to="." method="_on_ini_mouse_exited"]
[connection signal="mouse_entered" from="end" to="." method="_on_end_mouse_entered"]
[connection signal="mouse_exited" from="end" to="." method="_on_end_mouse_exited"]
